# ScreetimeExtractor

./: .gitignore  Makefile  README.md  agent_prompt.md  apps.yaml  pyproject.toml
src/screentime_analyzer/: __init__.py  agent.py  analyse.py  cli.py  extract.py  instagram.py
