[project]
name = "screentime-analyzer"
version = "0.1.0"
description = "Extract, analyse, and get LLM-powered insights from your iPhone screen time data"
authors = [
    {name = "Romanos", email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["screen-time", "iphone", "digital-wellness", "data-analysis"]

dependencies = [
    "pandas>=2.0,<4.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.13,<1.0",
    "scipy>=1.10,<2.0",
    "reportlab>=4.0,<5.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
]

[project.scripts]
screentime = "screentime_analyzer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
